# BeatzPer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.txt  galcher.aiff
include/: dirmonitor.h  httpservrrr.h
src/: .bpm_extractor.h.swp  .dirmonitor.h.swp  audio_utils.cpp  audio_utils.h  bpm_extractor.cpp  bpm_extractor.h  defjams.h  dirmonitor.cpp  dirmonitor.h  httpservrrr.cpp  httpservrrr.h  main.cpp
www/: index.html
